# QwenPaw-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  README.md  README_ja.md  README_ru.md  README_vi.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 4-bug_report.md
.github/workflows/: desktop-release.yml  docker-release.yml  e2e-integration.yml  fork-verify-desktop.yml  full-tests-nightly.yml  issue-welcome.yml  pr-welcome.yml  (+5 more)
console/: package-lock.json  package.json  tauri.html  vite.config.ts
console/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/nsis/: qwenpaw-desktop-debug.cmd  qwenpaw-desktop-debug.ps1  stop-backend-sidecar.ps1
console/src-tauri/nsis-languages/: English.nsh  Indonesian.nsh  Japanese.nsh  PortugueseBR.nsh  Russian.nsh  SimpChinese.nsh
console/src-tauri/permissions/: desktop-updater.toml  devtools.toml  tray.toml
console/src-tauri/src/: backend.rs  backend_download.rs  lib.rs  tray.rs  updates.rs
console/src-tauri/src/backend/: command.rs
console/src-tauri/src/updates/: cache.rs  events.rs  guard.rs  remote.rs  signature.rs  version.rs
deploy/: Dockerfile  entrypoint.sh
e2e/: E2E_COVERAGE_REPORT.md  README.md  conftest.py  pytest.ini  requirements.txt
scripts/: README.md  cleanup_windows_sandbox.py  run_tests.py  wheel_build.ps1  wheel_build.sh
tests/: conftest.py  test_cli_version.py
website/: index.html  package.json  pnpm-lock.yaml
(+1129 files in other folders)
